// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Icons/BookSeamIcon should render a box seam icon of variant danger 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.e {
  color: #212529;
}
@media (min-width: 1200px) {
  .f {
    font-size: 2rem !important;
  }
}


<svg
  width="16"
  height="16"
  class="a b c d e f box-seam-icon"
  id="box-seam"
  viewBox="0 0 16 16"
>
  <path
    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
  ></path></svg
>;
"
`;

exports[`components/Icons/BookSeamIcon should render a box seam icon of variant default 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.e {
  color: #212529;
}
@media (min-width: 1200px) {
  .f {
    font-size: 2rem !important;
  }
}


<svg
  width="16"
  height="16"
  class="a b c d e f box-seam-icon"
  id="box-seam"
  viewBox="0 0 16 16"
>
  <path
    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
  ></path></svg
>;
"
`;

exports[`components/Icons/BookSeamIcon should render a box seam icon of variant info 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.e {
  color: #212529;
}
@media (min-width: 1200px) {
  .f {
    font-size: 2rem !important;
  }
}


<svg
  width="16"
  height="16"
  class="a b c d e f box-seam-icon"
  id="box-seam"
  viewBox="0 0 16 16"
>
  <path
    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
  ></path></svg
>;
"
`;

exports[`components/Icons/BookSeamIcon should render a box seam icon of variant primary 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.e {
  color: #212529;
}
@media (min-width: 1200px) {
  .f {
    font-size: 2rem !important;
  }
}


<svg
  width="16"
  height="16"
  class="a b c d e f box-seam-icon"
  id="box-seam"
  viewBox="0 0 16 16"
>
  <path
    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
  ></path></svg
>;
"
`;

exports[`components/Icons/BookSeamIcon should render a box seam icon of variant secondary 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.e {
  color: rgba(33, 37, 41, 0.75);
}
@media (min-width: 1200px) {
  .f {
    font-size: 2rem !important;
  }
}


<svg
  width="16"
  height="16"
  class="a b c d e f box-seam-icon"
  id="box-seam"
  viewBox="0 0 16 16"
>
  <path
    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
  ></path></svg
>;
"
`;

exports[`components/Icons/BookSeamIcon should render a box seam icon of variant success 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.e {
  color: #212529;
}
@media (min-width: 1200px) {
  .f {
    font-size: 2rem !important;
  }
}


<svg
  width="16"
  height="16"
  class="a b c d e f box-seam-icon"
  id="box-seam"
  viewBox="0 0 16 16"
>
  <path
    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
  ></path></svg
>;
"
`;

exports[`components/Icons/BookSeamIcon should render a box seam icon of variant warning 1`] = `
".a {
  width: 1em;
}
.b {
  height: 1em;
}
.c {
  vertical-align: -0.125em;
}
.d {
  fill: currentcolor;
}
.e {
  color: #212529;
}
@media (min-width: 1200px) {
  .f {
    font-size: 2rem !important;
  }
}


<svg
  width="16"
  height="16"
  class="a b c d e f box-seam-icon"
  id="box-seam"
  viewBox="0 0 16 16"
>
  <path
    d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
  ></path></svg
>;
"
`;
